id createat text result

--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -388,65 +388,23 @@
        "[153818 rows x 31 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# id createat, text, result 컬럼 저장으로 만들기\n",
     "import pandas as pd\n",
-    "df = pd.read_csv(\"./TweetData/오징어_게임_ko.csv\")\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "374       False\n",
-       "387       False\n",
-       "397       False\n",
-       "403       False\n",
-       "416       False\n",
-       "          ...  \n",
-       "153811    False\n",
-       "153812    False\n",
-       "153813    False\n",
-       "153814    False\n",
-       "153816    False\n",
-       "Name: text, Length: 78127, dtype: bool"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "df = pd.read_csv(\"./오징어게임_ko.csv\")\n",
     "df=df[-df[\"text\"].str.contains(\"https|출장|account is temporarily unavailable because|헬스보이짐|잠원지수영장0시간|#출장걸|안마방|룸싸룽|야식애인|화성카센터|홍어삼합|대덕대학교이름|유흥업소|마다가스카르토아마시나|고창군낚시터|청도군알뜰매장|땅따먹기|영암군철물점|전북28살여자|엄브렐라|유흥|셀스타그램|합천|실내복증정|인형녀|ㅈㄱㅁㄴ|쉼터냥이들|워킹대디|봉화군아침스타그램|동작구사우나|고창군노래방|조건만남|FWB|상서구캠핑장|지민|sex|yu1love_|เปิดเทอมปุ๊บซีรีส์น่าดูยาวเลย|신송홀딩스\")]\n",
-    "df[\"text\"].str.contains(\"헬스보이짐\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 'text' 컬럼만 선택하여 새로운 데이터프레임을 생성합니다.\n",
     "text_df = df[['text']]\n",
-    "\n",
-    "# 선택한 컬럼을 'new_file_name.csv' 파일로 저장합니다.\n",
-    "text_df.to_csv('./text.csv', index=False,encoding='utf-8-sig')"
+    "text_df.to_csv('./text_result.csv', index=False,encoding='utf-8-sig')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -641,6 +599,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"@myangtaku 이제 즐거운 오징어 게임\"라는 문장을 감정의 한 단어로 말해줘\n",
+      "\"@jisung_ball 오징어게임극찬할듯\"라는 문장을 감정의 한 단어로 말해줘\n",
+      "\"@p13_DnF 그런가요..? 아 근데 연애는 바라기라서 잘할자신 있는데 멀티가안되서 연애+게임조합도 잘 안맞는 타입;;\n",
+      "(그리고 오징어똥자루)\"라는 문장을 감정의 한 단어로 말해줘\n",
+      "\"@yeomdayeon 제가선택한 자살방법은 해외에서 난리난 오징어게임 시즌2 예고편 중국이 경악한 우리나라 국가대표 쇼트트랙 일본이 열폭하는 k-드라마 종이의집 도쿄 실시간 외국인반응 시청하기\"라는 문장을 감정의 한 단어로 말해줘\n",
+      "\"오징어게임 250번 참가자 이지랄\"라는 문장을 감정의 한 단어로 말해줘\n",
+      "\"노승환 이새끼 오징어게임에 던져놔야ㅠ정신을 차리지\"라는 문장을 감정의 한 단어로 말해줘\n",
+      "\"@give_me___money 나 오징어 게임 안봐서 몰라\"라는 문장을 감정의 한 단어로 말해줘\n",
+      "\"@ZCh3m 오징어게임 주인공 모에화한것같이 생긋다\"라는 문장을 감정의 한 단어로 말해줘\n",
+      "\"@그치만 헤결이 흥행 못 하는 건 슬퍼\n",
+      "근데 헤결이 오징어게임처럼 유행하는 상상하니까 그건 그거대로 골때리긴 한다\n",
+      "대중성엔 대가가 따르는 거구나\"라는 문장을 감정의 한 단어로 말해줘\n",
+      "\"이게오징어게임도아니고\n",
+      "빡빡머리1나명 죽인다는데 다들 동의햇다는게\"라는 문장을 감정의 한 단어로 말해줘\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import time\n",
+    "import openai\n",
+    "import pandas as pd\n",
+    "df = pd.read_csv(\"./text.csv\")\n",
+    "\n",
+    "messages = []\n",
+    "df[\"results\"] = \"\"\n",
+    "openai.api_key = \"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\"\n",
+    "\n",
+    "for i in range(10):\n",
+    "    user_content = f'\"{df[\"text\"].loc[i]}\"라는 문장을 감정의 한 단어로 말해줘'\n",
+    "    print(user_content)\n",
+    "    messages.append({\"role\": \"user\", \"content\": f\"{user_content}\"})\n",
+    "    completion = openai.ChatCompletion.create(model=\"gpt-3.5-turbo\", messages=messages)\n",
+    "    assistant_content = completion.choices[0].message[\"content\"].strip()\n",
+    "    messages.append({\"role\": \"assistant\", \"content\": f\"{assistant_content}\"})\n",
+    "    df.loc[i, \"results\"] = f\"{assistant_content}\"\n",
+    "    time.sleep(15) # OpenAI API의 Rate Limit가 초과되었기 때문에 발생하기 때문\n",
+    "    \n",
+    "df.to_csv('./text_result.csv', index=False,encoding='utf-8-sig')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -663,7 +671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
